# vnlpkit

./: .env.template  .gitignore  Dockerfile  Makefile  README.md  bracket_filter.py  docker-compose-for-m1-mac.yml  docker-compose.yml  lang_model.py  mecabrc  pyproject.toml  replacing.py  run.sh
makefiles/: formatter.mk  m1_mac.mk  pytest.mk  utils.mk
notebooks/tutorials/: wordcloud_tutorial.ipynb
scripts/: run.sh
scripts/cuda/: check_cuda.sh
scripts/jupyter/: jupyter_init.sh
scripts/mecab/: mecab_sample.sh
tests/mecab/: test_mecab.sh
tests/vnlpkit/utils/: test_finder.py
tests/vnlpkit/visualizing/wordcloud/: test_wordcloud_generator.py
vnlpkit/: bracket_filter.py  lang_model.py  mecab_tokenizer.py  phrase_filter.py  pke_utils.py  replacing.py  termextract_utils.py  text_extractor.py  text_preprocessor.py  vocabulary_utils.py
vnlpkit/classification/sentiment/: gcp_natural_language_api.py
vnlpkit/extraction/: tfidf_keyword_extractor.py
vnlpkit/utils/: finder.py  list_utils.py  time_utils.py
vnlpkit/visualizing/matplotlib/: colormap_names.py
vnlpkit/visualizing/wordcloud/: wordcloud_generator.py
work/config/column_names/: livedoor_news_columns.py
work/config/path/: general_dirs.py  livedoor_news_corpus_paths.py
work/downloader/notebooks/: create_livedoor_news_corpus_dataset.ipynb
work/downloader/scripts/: download_livedoor_news_corpus.sh
work/fonts/: font_paths.py
work/mecab/config/: mecab_dic_paths.py
work/mecab/notebooks/: mecab_tokenizer.ipynb  mecab_tutorial.ipynb
work/nlp_tasks/text_classification/Hugging_Faceを使って事前学習モデルを日本語の感情分析用にファインチューニングしてみた/: Hugging_Faceを使って事前学習モデルを日本語の感情分析用にファインチューニングしてみた.ipynb
work/wordcloud/config/: wordcloud_data_paths.py
work/wordcloud/notebooks/: tfidf_wordcloud.ipynb  wordcloud_generator.ipynb  wordcloud_tutorial.ipynb
