[tool.poetry]
name = "nlpkit"
version = "1.0.0"
description = "Custom modules for Natural Language Processing"
authors = ["v-crn <var.cyrano@gmail.com>"]

[virtualenvs]
in-project = true

[tool.poetry.dependencies]
python = ">=3.9,<3.10"
category-encoders = "^2.2.2"
numpy = "^1.21.2"
pandas = "^1.3.2"
tqdm = "^4.62.2"

[tool.poetry.dev-dependencies]
isort = "^5.9.3"
black = "^21.7b0"
autoflake = "^1.4"
flake8 = "^3.9.2"
mypy = "^0.910"
pyproject-flake8 = "^0.0.1a2"
pytest = "^6.2.4"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88

[tool.flake8]
max-line-length = 88
ignore = "E203,W503,W504"
max-complexity = 20

[tool.isort]
profile = "black"

[tool.mypy]
strict_optional = "True"
warn_redundant_casts = "True"
warn_unused_ignores = "True"
disallow_any_generics = "True"
check_untyped_defs = "True"
disallow_untyped_defs = "True"
ignore_missing_imports = "True"

[[tool.mypy.overrides]]
module = ["matplotlib.*", "tqdm.*", "pandas.*", "scipy"]
ignore_missing_imports = "True"
